# xArmControl

./: .cursorignore  README.md
src/: test.py
src/xarm_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/xarm_description/config/: my_controllers.yaml
src/xarm_description/hardware/: xarm_control.cpp  xarm_hardware.cpp
src/xarm_description/hardware/include/: joint.hpp  xarm_hardware.hpp
src/xarm_description/launch/: arm.launch.py  display.launch.py  gazebo.launch.py  test.launch.py
src/xarm_description/urdf/: XArm.gazebo  XArm.trans  XArm.xacro  materials.xacro  ros2_control.xacro
src/xarm_hardware/: CMakeLists.txt  package.xml  xarm_hardware_plugin.xml
src/xarm_hardware/include/xarm_hardware/: joint.hpp  pid_controller.hpp  xarm_control.hpp  xarm_hardware.hpp
src/xarm_hardware/src/: test.cpp  xarm_control.cpp  xarm_hardware.cpp
src/xarm_moveit_config/: .setup_assistant  package.xml
src/xarm_moveit_config/config/: XArm.ros2_control.xacro  XArm.srdf  XArm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/xarm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/xarm_teleop/: package.xml  setup.py
src/xarm_teleop/xarm_teleop/: arm_control.py
