<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aakash27@bu.edu">aakash</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>xarm_description</depend>
  <depend>ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
      <ros2_control plugin="${prefix}/xarm_hardware_plugin.xml"/>
  </export>
</package>
